[gd_scene load_steps=5 format=3 uid="uid://dhrbtkke4ouau"]

[ext_resource type="FontFile" uid="uid://dnd5m8sttr5p1" path="res://assets/fonts/joystix monospace.otf" id="1_3fits"]
[ext_resource type="Script" path="res://scenes/hud.gd" id="1_vwhbm"]
[ext_resource type="Texture2D" uid="uid://oe382fiyrj1e" path="res://assets/img/HUD/Crown.png" id="2_xx2jq"]
[ext_resource type="Texture2D" uid="uid://bn2hkp16i73aw" path="res://assets/img/HUD/Clock.png" id="3_ya835"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_vwhbm")

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -48.0
offset_right = 403.0
offset_bottom = -28.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.819608, 0.74902, 0.690196, 1)
theme_override_fonts/font = ExtResource("1_3fits")
text = "dev: @dabudabot"

[node name="Label2" type="Label" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -242.0
offset_top = -48.0
offset_right = -30.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.819608, 0.74902, 0.690196, 1)
theme_override_fonts/font = ExtResource("1_3fits")
text = "art: @sourwaters"

[node name="HighScore" type="Sprite2D" parent="."]
position = Vector2(1000, 30)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_xx2jq")
centered = false

[node name="HighScoreStr" type="Label" parent="HighScore"]
anchors_preset = -1
anchor_left = 0.679
anchor_top = 0.5
anchor_right = 0.679
anchor_bottom = 0.5
offset_left = -56.553
offset_top = -29.5
offset_right = 59.447
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.223529, 0.168627, 0.207843, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3fits")
theme_override_font_sizes/font_size = 30
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrScore" type="Sprite2D" parent="."]
position = Vector2(30, 30)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_ya835")
centered = false

[node name="CurrScoreStr" type="Label" parent="CurrScore"]
anchors_preset = -1
anchor_left = 0.679
anchor_top = 0.5
anchor_right = 0.679
anchor_bottom = 0.5
offset_left = -56.553
offset_top = -29.5
offset_right = 59.447
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.223529, 0.168627, 0.207843, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3fits")
theme_override_font_sizes/font_size = 30
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1
